2013-10-16  Yury Aliaev  <mutab0r@rambler.ru>
	configure.in: Fixed compilation with --no-asm option.

2013-10-13  Yury Aliaev  <mutab0r@rambler.ru>
	po/*: Upgrade to gettext-0.18.2, clean-ups;
	app/audio.c, app/audioconfig.c, app/gui.c, app/sample-editor.c,
	configure.in: clean-ups regarding to compilation with audiofile library
	and without sample output libraries at all.

2013-10-12  Yury Aliaev  <mutab0r@rambler.ru>
	* app/sample-display.h: Compilation at some systems is fixed.

2013-09-27  Yury Aliaev  <mutab0r@rambler.ru>
	* app/drivers/esd-output.c: Error reporting is now displayed in correct
	encoding. Seems there is no notable delay when working thru Pulseaudio
	server.

2013-09-23  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.c, app/instrument-editor.[ch], app/instrument-editor.h,
	app/menubar.c, app/module-info.c, app/sample-editor.c: Some bugs related
	to instruments' and samples' lists updating are fixed.

2013-09-20  Yury Aliaev  <mutab0r@rambler.ru>
	* app/sample-editor.c: Compilation with audiofile is fixed;
	* app/audio.c, app/audio.h, app/audioconfig.c, app/drivers/file-output.c:
	File output driver is now configurable (samplerate and number of channels),
	sndfile and audiofile variants share a lot of code;
	* app/gui.c: The buggy displaying of .wav files is fixed;
	* app/file-operations.[ch], app/file-operations.h, app/gui.c,
	app/instrument-editor.c, app/sample-editor.c: Tooltips are added to file
	selection page toggles.

2013-09-18  Yury Aliaev  <mutab0r@rambler.ru>
	* app/track-editor.c: Buffer overflow is fixed (utf-8 strings require
	more place);
	* app/gui.[ch], app/modue-info.c: Navigation with TAB and Up/Down arrows
	is implemented at Module info page;
	* app/sample-editor.c, app/st-subs.[ch]: The internal truncating of samples
	treated as 8 bit is removed, because it causes the significant precision
	loss. The samples are now actually rounded only at module/instrument
	saving.

2013-09-17  Yury Aliaev  <mutab0r@rambler.ru>