@@ -1,19 +1,17 @@
 6) Huge CPU overhead (partially fixed);
-9) Contains a lot of obsolete code.
+9) Contains a lot of obsolete code. Try to compile finally with -DG_DISABLE_DEPRECATED
 14) some CPU-consuming code in the instrument list selection callback (really 
 in the callback) and main notebook switch callback;
 22) Convert ESD driver into the modern Pulseaudio API.
 36) Pressing Ctrl-O in Instrument editor crashes ST at some machines;
-49) Update or even rewrite JACK driver (for old and new jack);
-Add "Activate" mathod to the driver called when the driver becomes active
-(after config loading for the default one and when switching to it into audio config dialog).
-Make also "Deactivate" method for the opposite job.
+49) Update or even rewrite JACK driver;
 54) Using discretization frequency > 64 kHz gives wrong notes (pitch is 2 times higher, independent on
-the discretization frequency). It is a mixer bug, file output does the same;
+the discretization frequency). It is a mixer bug, file output does the same. This bus appears with
+asm/C/integer mixers, so it might be coming from somewhere else;
 55) Cleanup sun audio driver;
-58) Check (wet.xm) why after opening originsl ft2 xm and saving it as is some fields in the instrument
+58) Check (wet.xm) why after opening original ft2 xm and saving it as is some fields in the instrument
 header are different;
-59) Complete Russian translation and cheat-sheet page, chek what happens with sl.po;
+59) Complete Russian translation and cheat-sheet page, check what happens with sl.po;
 
 Some remarks about asm mixer bug: at the sample end and loop points there are ugly clicks
 (ramping works badly). Also when the previous channel has amplitude > 0, the following one
